<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SWTOR Central</string>
    <string name="server_name">Server Status</string>
    <string name="reader_name">News</string>
    <string name="datacron_name">Datacron</string>
    <string name="main_header">SWTOR Central</string>
    <string name="class_header">Classes</string>
    <string name="settings_header">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_server">Server Status</string>
    <string name="server_main">Server Status</string>
    <string name="serverkey_sub">Color Key</string>
    <string name="server_us">United States</string>
    <string name="server_eu">European</string>
    <string name="server_sub">Servers</string>
    <string name="advanced_main">Advanced Class</string>
    <string name="progression_main">Progression</string>
    <string name="faction_main">Faction</string>
    <string name="planet_main">Planet</string>
    <string name="discipline_main">Disciplines</string>
    <string name="codex_detail_main">Codex Detail</string>
    <string name="character_main">Characters</string>
    <string name="character_add_main">Add Character</string>
    <string name="codex_main">Codexes</string>
    <string name="character_edit_main">Edit Character</string>
    <string name="ability_detail_main">Ability Details</string>
    <string name="achievements_main">Achievements</string>
    <string name="tutorials_main">Tutorials</string>
    <string name="video_main">Test</string>
    <string name="test_main">Test</string>
    <string name="abilities">Abilities</string>
    <string name="companion">Companion</string>
    <string name="advanced_classes">Advanced Classes</string>
    <string name="image">Thumbnail</string>
    <string name="image_placeholder">Placeholder for Images</string>
   	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="server1">US Servers</string>
    <string name="header1">Menu</string>
    <string name="navigation_item_1">News</string>
    <string name="navigation_item_2">Server Status</string>
    <string name="navigation_item_3">Classes</string>
    <string name="navigation_item_4">Progression</string>
    <string name="navigation_item_5">Achievements</string>
    <string name="navigation_item_6">Datacrons</string>
    <string name="navigation_item_7">Codex</string>
    <string name="navigation_item_8">Settings</string>
    <string name="navigation_item_10">Test</string>
    <string name="navigation_item_11">Ability</string>
    <string name="header2">Advanced</string>
	<string name="tab1">US Servers</string>
    <string name="tab2">European Servers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="positive">OK</string>
    <string name="companion_desc">Throughout your adventures you will come face-to-face with a wide range of interesting characters. Some will stop at nothing to see you destroyed, while others will offer to aid you on your mission. A select few will even elect to join your cause and stand by your side as you take on the toughest challenges in the galaxy. Your Companions will accompany you for a wide range of reasons, be it adventure, glory, or something more personal, and will swear themselves to helping you save – or conquer – the galaxy.</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="button">Add</string>
    <string name="testcodex">Codex: Galactic History 47: Naddist Rebels</string>
    <string name="testcoord">X: 1107, Y: 80</string>
    <string name="testreward">Aim +4</string>
    
    <string name="republic">Republic</string>
    <string name="empire">Empire</string>
	
    <string name="companiongifts">Gifts:</string>
    
    <string name="informationsub">Information</string>
    <string name="datacronsub">Datacrons</string>
    <string name="locationslore">Locations</string>
    <string name="personslore">Persons</string>
    <string name="titleslore">Titles</string>
    <string name="gameruleslore">Game Rules</string>
    <string name="organizationslore">Organizations</string>

    <string name="loading">Loading...</string>
    <string name="none">None</string>

    <string name="beastlore">Beast</string>
    <string name="lore">Lore</string>
    
    <string name="faction">Choose Your Allegiance</string>
    <string name="factionsub">Allegiance</string>
    
    <string name="progressionsub">Progression</string>
    <string name="device_type">phone</string>
    <string name="characters">Characters</string>
    <string name="character_menu_add">Add Character</string>
    <string name="character_menu_save">Save</string>
    <string name="character_menu_edit">Edit</string>
    <string name="character_menu_delete">Delete</string>
    
    <string name="character_name_hint">Name</string>
    <string name="character_legacy_label1">The</string>
    <string name="character_legacy_label2">Legacy</string>
    <string name="character_legacy_hint">Legacy Name</string>
    <string name="character_description_hint">Description</string>
    <string name="character_level_hint">Level</string>
    <string name="character_gender_hint">Gender</string>
    <string name="character_class_hint">Class</string>
    <string name="character_advancedclass_hint">Advanced Class</string>
    <string name="character_race_hint">Race</string>
    <string name="character_alignment_hint">Alignment</string>
    <string name="character_crew1_hint">Crew Skill 1</string>
    <string name="character_crew2_hint">Crew Skill 2</string>
    <string name="character_crew3_hint">Crew Skill 3</string>

    <string name="character_label">Character</string>
    <string name="character_label_detail">Detail</string>
    <string name="character_class_label">Class</string>
    <string name="character_other_label">Other</string>

    <string name="server_light">Light</string>
    <string name="server_standard">Standard</string>
    <string name="server_heavy">Heavy</string>
    <string name="server_veryheavy">Very Heavy</string>
    <string name="server_full">Full</string>
    <string name="server_menu">Help</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dictum fermentum cursus. Aenean sem elit, porta eget pellentesque in, mollis ac dui. Aliquam feugiat est diam, non feugiat orci convallis et. Integer et tempus enim, et commodo libero. Cras interdum vitae tellus non consectetur. Duis at sagittis leo. Sed imperdiet sodales ultricies. Fusce quis luctus magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ex elit, mattis ac hendrerit id, condimentum sed diam. Nulla sem dolor, molestie at dolor at, pretium sollicitudin nibh. Sed suscipit libero id neque egestas ornare. Etiam sit amet rhoncus tellus, sed tempus velit.Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Donec risus enim, hendrerit in nulla vel, semper aliquet ligula. Praesent molestie, ante at viverra ultrices, eros erat viverra risus, egestas hendrerit urna neque sit amet purus. Praesent eu eleifend lorem. Integer vitae sollicitudin magna, malesuada ornare ex. Nunc facilisis posuere arcu sed ornare. Integer sapien odio, posuere in dictum ut, scelerisque cursus erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis a dapibus mi, sed elementum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</string>

    <string name="test_profile_name">Benner</string>
    <string name="test_profile_desc">A master of the secrets of the Force, the Jedi Consular is both fighter and healer, teacher and student. The Force can be used to cloud the minds of the weak, restore strength to the fallen and hurl both opponents and objects through the air.</string>
</resources>