<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/ic_action_feed"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_action_database"
            android:title="@string/navigation_item_2"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_datacron"
            android:title="@string/navigation_item_3"/>
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_action_shield"
            android:title="@string/navigation_item_4"/>
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/ic_progression"
            android:title="@string/navigation_item_5"/>
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/ic_action_calendar_month"
            android:title="@string/navigation_item_6"/>
        <item
            android:id="@+id/navigation_item_7"
            android:icon="@drawable/ic_action_users"
            android:title="@string/navigation_item_7"/>
        <item
            android:id="@+id/navigation_item_8"
            android:icon="@drawable/ic_action_achievement"
            android:title="@string/navigation_item_8"/>
        <item
            android:id="@+id/navigation_item_9"
            android:icon="@drawable/ic_action_book"
            android:title="@string/navigation_item_9"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/navigation_item_10">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_1"
                android:icon="@drawable/ic_action_gear"
                android:title="@string/navigation_item_10"/>
            <item
                android:id="@+id/navigation_sub_item_2"
                android:icon="@drawable/ic_action_gear"
                android:title="@string/navigation_item_11"/>
        </menu>
    </item>
</menu>