<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_10"
    android:background="@color/background"
    android:layout_gravity="center" >

    <TextView
        android:textSize="20.0dip"
        android:textColor="@color/text"
        android:id="@+id/txtFaction"
        android:gravity="center"
        android:text="@string/faction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
      android:id="@+id/layoutRepublic"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginBottom="20dp"
      android:gravity="center"
      android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgRepublic"
            android:layout_width="@dimen/fab_large"
            android:layout_height="@dimen/fab_large"
            android:padding="8dp"
            android:background="@drawable/round"
            android:elevation="3dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_republic"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="66dp"
            android:layout_marginStart="66dp" />

      <TextView
        android:id="@+id/txtRepublic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
          android:gravity="center"
        android:text="@string/republic"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/text"
          android:layout_below="@+id/imgRepublic"
          android:layout_toLeftOf="@+id/imgEmpire"
          android:layout_toStartOf="@+id/imgEmpire" />

        <ImageButton
            android:id="@+id/imgEmpire"
            android:layout_width="@dimen/fab_large"
            android:layout_height="@dimen/fab_large"
            android:padding="8dp"
            android:background="@drawable/round_red"
            android:elevation="3dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_empire"
            android:layout_above="@+id/txtEmpire"
            android:layout_alignRight="@+id/txtEmpire"
            android:layout_alignEnd="@+id/txtEmpire"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp" />

        <TextView
            android:id="@+id/txtEmpire"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/empire"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/text"
            android:layout_below="@+id/imgRepublic"
            android:layout_toRightOf="@+id/imgRepublic"
            android:layout_toEndOf="@+id/imgRepublic" />
  </RelativeLayout>
</LinearLayout>
